[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Ball.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="Ball" type="RigidBody2D"]
mass = 0.00102041
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Gol" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2147483648

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Gol"]
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Ball_body_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Gol" to="." method="_on_Gol_area_entered"]
